1.2.4b8:

1.2.4b7:
    Core & Setup:
    * 0452 Speedup generation of configuration...
    * 0451 FIX: Ignore missing check types when creating configuration for Nagios
    * 0259 FIX: Fixed htpasswd permission problem in check_mk standalone installation...
    * 0453 FIX: Fix ugly Python exception in host diagnosis page in case of SNMP error...
    * 0696 FIX: Remove garbled output of cmk -v in state of CMC

    Checks & Agents:
    * 0571 cmciii_lcp_fans: now monitors the lower limit for the rpm
    * 0572 cmciii_lcp_waterflow: lower and upper limits to the flow are now monitored
    * 0573 cmciii_lcp_airin, cmciii_lcp_airout, cmciii_lcp_waterin, cmciii_lcp_waterout: checks now observe limits to the temperatures
    * 0258 FIX: ps: fixed calculation of virtual/resident memory from windows agents...
    * 0120 FIX: stulz_humidity, apc_humidity: Fixed bug while processing check params...
    * 0260 FIX: Fixed incorrect formatting of checks with long output...
    * 0261 FIX: df_netapp32 / df_netapp: Fixed bug with negative size in check output...
    * 0262 FIX: ps: Now able to skip disabled "Process Inventory" rules...
    * 0264 FIX: printer_supply_ricoh: now reports correct filling levels...

    Multisite:
    * 0122 FIX: Multisite view editor not longer throwing a exception when loading views from other users
    * 0676 FIX: Move view "Stale services" to Problems folder

    WATO:
    * 0434 FIX: Fixed wrong count of failed hosts in bulk inventory mode...
    * 0678 FIX: Move two last global settings of Event Console to proper places

    Reporting & Availability:
    * 0681 FIX: Display correct year for availability range for last month in january

    Event Console:
    * 0679 FIX: Allow non-Ascii characters in generated events
    * 0680 FIX: Do not allow spaces in host names in event simulator...

    Livestatus-Proxy:
    * 0263 FIX: livestatus log table: fixed missing logentries of archived logfiles...


1.2.4b6:
    Checks & Agents: