@@ -1,4 +1,7 @@
 1.2.4b8:
+    Core & Setup:
+    * 0682 FIX: Allow overriding of active checks by more specific rule...
+
 
 1.2.4b7:
     Core & Setup:
